# sysentropy

./: LICENSE  README.md  pyproject.toml
eventstream/: __init__.py  config.py  core.py  formatters.py  utils.py
examples/: timestamped_logfile.py
sysentropy/: __init__.py  config.py  core.py  formatters.py  utils.py
tests/: __init__.py  test_color_detection.py  test_file_logging.py  test_log_exceptions.py  test_reconfigure.py  test_stdout_colors.py  test_time_block.py  test_timing.py  timestamped_logfile.py
