[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sysentropy"
version = "0.1.1"
description = "Opinionated Python logging"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "leogabac" }
]
keywords = ["logging", "logger", "color", "stdout", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Logging",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/leogabac/sysentropy"
Repository = "https://github.com/leogabac/sysentropy"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sysentropy*"]
